--- a/DRHSWS_UI/src/app/consultant/entry/entry.component.html
+++ b/DRHSWS_UI/src/app/consultant/entry/entry.component.html
@@ -1,49 +1,49 @@
 <h1>Consultant Review</h1>
 	<p>Enter information down below: </p>
 	
-	<form action="/action_page.php">
+	<form>
 		<div class="form-group">
-    <label >Consultant First Name: </label>
-		<input type="text" name="FirstName" value=""><br>
+      <label>Consultant First Name: </label>
+      <input type="text" class="form-control" name="FirstName" value=""><br>
 		</div>
 		
 		<div class="form-group">
-    <label >Consultant Last Name: </label>
-    <input type="text" name="LastName" value=""><br><hr>
+      <label >Consultant Last Name: </label>
+      <input type="text" class="form-control" name="LastName" value=""><br><hr>
 		</div>		
 
 		<div class="form-group">
-    <label >Student First Name: </label>
-    <input type="text" name="SFirstName" value=""><br>
+      <label >Student First Name: </label>
+      <input type="text" class="form-control" name="SFirstName" value=""><br>
+   </div>		
+
+		<div class="form-group">
+      <label >Student Last Name: </label>
+      <input type="text" class="form-control" name="SLastName" value=""><br><hr>
 		</div>		
 
 		<div class="form-group">
-    <label >Student Last Name: </label>
-    <input type="text" name="SLastName" value=""><br><hr>
+      <label >Student’s Teacher: </label>
+      <input type=”text” class="form-control" name=”Teacher” value=""><br>
 		</div>		
 
 		<div class="form-group">
-    <label >Student’s Teacher: </label>
-    <input type=”text” name=”Teacher” value=""><br>
+      <label >Where the student was successful: </label>
+      <input type="text" class="form-control" name="CFeedback" value=""><br>
 		</div>		
 
 		<div class="form-group">
-    <label >Where the student was successful: </label>
-    <input type="text" name="CFeedback" value=""><br>
-		</div>		
-
-		<div class="form-group">
-    <label >What the student could improve upon: </label>
-    <input type="text" name="NextStep" value=""><br>
+      <label >What the student could improve upon: </label>
+      <input type="text" name="NextStep" value=""><br>
 		</div>		
 		
 		<div class="form-group">
-    <label >Consultant Email:</label> 
-    <input type="text" name="CEmail" value=""><br>
+      <label >Consultant Email:</label> 
+      <input type="text" class="form-control" name="CEmail" value=""><br>
 		</div>	
 	
 		<div class="form-group">
-		<input type="submit" value="Submit" class="btn btn-primary">
+		  <input type="submit" value="Submit" class="btn btn-primary">
 		</div>
 
     <label >Upload File (If necessary)</label>
