--- a/DRHSWS_UI/src/app/consultant/entry/entry.component.html
+++ b/DRHSWS_UI/src/app/consultant/entry/entry.component.html
@@ -7,7 +7,7 @@
   </mat-card-header>
 
   <mat-card-content>
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col">
           <div class="form-group">
