--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -7,10 +7,10 @@
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/appointment">Sign-ups</a>
+        <a class="nav-link" routerLink="/signup">Sign-ups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/consultants">consultants</a>
+        <a class="nav-link" routerLink="/consultant">consultants</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin">Admin(Ease)</a>
