--- a/DRHSWS_UI/src/app/signup/form/form.component.html
+++ b/DRHSWS_UI/src/app/signup/form/form.component.html
@@ -1,29 +1,38 @@
 <br>
 <h3>Sign Up Form</h3>
 <h4>{{date}}</h4>
-<form>
+<form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
+    <input id="firstname" type="text" name="firstname"class="form-control" id="firstName" placeholder="Enter First Name">
   </div>
   <div class="form-group">
     <label for="lastName">Last Name</label>
-    <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name">
+    <input id="lastname" type="text" name="lastname" class="form-control" id="lastName" placeholder="Enter Last Name">
   </div>
-  <div class="form-group">
+  <!-- <div class="form-group">
     <label for="grade">Grade</label>
-    <select class="custom-select" id="grade">
+    <select id="" class="custom-select" name="grade" id="grade">
       <option selected>Open this select menu</option>
-      <option value="1">9th</option>
+      <option value="1"> {{ grades[0] }}</option>
       <option value="2">10th</option>
       <option value="3">11th</option>
       <option value="4">12th</option>
     </select>
-  </div>
+  </div> -->
   <div class="form-group">
     <label for="topic">Topic of Assignment</label>
-    <input type="text" class="form-control" id="topic" placeholder="Enter Topic">
+    <input id="topic" type="text" name="topic" class="form-control" id="topic" placeholder="Enter Topic">
   </div>
-  <button type="submit" class="btn btn-primary">Sign-up</button>
+  <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign-up</button>
 </form>
 <br>
+<div class="row" *ngIf="submitted">
+<div class="col-xs-12">
+<h3>Your Data</h3>
+<p>First name: {{ data.firstname }}</p>
+<p>Last name: {{ data.lastname }}</p>
+<!-- <p>Grade: {{ data.grade }}</p> -->
+<p>Topic: {{ data.topic }}</p>
+</div>
+</div>
