--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="/signup">Sign-ups</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/consultant">consultants</a>
+        <a class="nav-link" routerLink="/consultant">Consultants</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin">Admin(Ease)</a>
