--- a/DRHSWS_UI/src/app/consultant/assignments/assignments.component.html
+++ b/DRHSWS_UI/src/app/consultant/assignments/assignments.component.html
@@ -1,3 +1,16 @@
-<p>
-  assignments works!
-</p>
+<table>
+  <tr>
+    <th>Name</th> 
+    <th>Lastname</th>
+    <th>Grade</th>
+    <th>Topic</th>
+    <th>Date</th>
+  </tr>
+  <tr>
+    <th>Josh</th>
+    <th>Yu</th>
+    <th>9th</th>
+    <th>IRP Final Paper</th>
+    <th>Wednesday B Lunch</th>
+  </tr>
+</table>
