--- a/DRHSWS_UI/src/app/signup/form/form.component.html
+++ b/DRHSWS_UI/src/app/signup/form/form.component.html
@@ -1,38 +1,36 @@
 <br>
 <h3>Sign Up Form</h3>
 <h4>{{date}}</h4>
-<form #f="ngForm" (ngSubmit)="onSubmit(f)">
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" >
   <div class="form-group">
-    <label for="firstName">First Name</label>
-    <input id="firstname" type="text" name="firstname"class="form-control" id="firstName" placeholder="Enter First Name">
+    <label for="firstname">First Name</label>
+    <input ngModel name="firstname" nametype="text" class="form-control" id="firstname" placeholder="Enter First Name">
   </div>
   <div class="form-group">
-    <label for="lastName">Last Name</label>
-    <input id="lastname" type="text" name="lastname" class="form-control" id="lastName" placeholder="Enter Last Name">
+    <label for="lastname">Last Name</label>
+    <input ngModel name="lastname" type="text" class="form-control" id="lastname" placeholder="Enter Last Name">
   </div>
-  <!-- <div class="form-group">
+  <div class="form-group">
     <label for="grade">Grade</label>
-    <select id="" class="custom-select" name="grade" id="grade">
+    <select ngModel name="grade" class="custom-select" id="grade">
       <option selected>Open this select menu</option>
-      <option value="1"> {{ grades[0] }}</option>
-      <option value="2">10th</option>
-      <option value="3">11th</option>
-      <option value="4">12th</option>
+      <option value="9th">9th</option>
+      <option value="10th">10th</option>
+      <option value="11th">11th</option>
+      <option value="12th">12th</option>
     </select>
-  </div> -->
+  </div>
   <div class="form-group">
     <label for="topic">Topic of Assignment</label>
-    <input id="topic" type="text" name="topic" class="form-control" id="topic" placeholder="Enter Topic">
+    <input ngModel name="topic" type="text" class="form-control" id="topic" placeholder="Enter Topic">
   </div>
-  <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Sign-up</button>
+  <button type="submit" class="btn btn-primary">Sign-up</button>
 </form>
 <br>
-<div class="row" *ngIf="submitted">
-<div class="col-xs-12">
-<h3>Your Data</h3>
-<p>First name: {{ data.firstname }}</p>
-<p>Last name: {{ data.lastname }}</p>
-<!-- <p>Grade: {{ data.grade }}</p> -->
-<p>Topic: {{ data.topic }}</p>
-</div>
+<div *ngIf="submitted">
+<h3> Your Data </h3>
+<p> Firstname: {{ data.firstname }} </p>
+<p> Lastname: {{ data.lastname }} </p>
+<p> Grade: {{ data.grade }} </p>
+<p> Topic: {{ data.topic }} </p>
 </div>
