--- a/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -1,43 +1,63 @@
+<!-- Consultant Entries -->
+<br>
+<h3>Consultant Entries</h3>
+
+<table mat-table [dataSource]="reviews" class="mat-elevation-z8" width="100%">
+  <!-- <ng-container>
+    <th mat-header-cell> Actions </th>
+    <td mat-cell > 
+      <button>G</button>
+    </td>
+  </ng-container> -->
+
+  <ng-container matColumnDef="Name">
+    <th mat-header-cell *matHeaderCellDef> Consultant </th>
+    <td mat-cell *matCellDef="let reviews"> {{ reviews.firstName}} {{reviews.lastName}} </td>
+  </ng-container>
+ 
+  <ng-container matColumnDef="Email">
+    <th mat-header-cell *matHeaderCellDef> Email </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.emailC}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Student">
+    <th mat-header-cell *matHeaderCellDef> Student </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.firstNameS}} {{reviews.lastNameS}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Teacher">
+    <th mat-header-cell *matHeaderCellDef> Teacher </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.teacher}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Review">
+    <th mat-header-cell *matHeaderCellDef> Review </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.feedback1}} {{reviews.feedback2}}  </td>
+  </ng-container>
+  
+  <tr mat-header-row *matHeaderRowDef="displayedColumnsR"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnsR;"></tr>
+</table>
+
+<!-- Manipulating Consultants -->
 <br>
 <h3>Add New Consultant</h3>
 <!-- Show list of consultant. Add and delete buttons on top. -->
 <button mat-raised-button (click)="add()"> Add </button>
 <button mat-raised-button (click)="remove()"> Remove </button>
 
-<table mat-table [dataSource]="data" class="mat-elevation-z8" width="100%">
-  <ng-container matColumnDef="first">
+<table mat-table [dataSource]="consultants" class="mat-elevation-z8" width="100%">
+  <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let consultant"> {{consultant.first}} </td>
+    <td mat-cell *matCellDef="let consultants"> {{consultants.first}} {{consultants.last}}</td>
   </ng-container>
-    
-  <ng-container matColumnDef="last">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let consultant"> {{consultant.last}} </td>
-    </ng-container>
-  <!-- Email Column -->
-  <ng-container matColumnDef="email">
+
+  <ng-container matColumnDef="Email">
     <th mat-header-cell *matHeaderCellDef> Email </th>
-    <td mat-cell *matCellDef="let consultant"> {{consultant.email}} </td>
+    <td mat-cell *matCellDef="let consultants"> {{consultants.email}} </td>
   </ng-container>
   
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumnsC"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnsC;"></tr>
 </table>
 <br>
-<!-- Form to add new consultants. Not done -->
-<!-- <form>
-  <div class="form-group">
-    <label for="firstName">First Name</label>
-    <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
-  </div>
-  <div class="form-group">
-    <label for="lastName">Last Name</label>
-    <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name">
-  </div>
-  <div class="form-group">
-    <label for="topic">Topic of Assignment</label>
-    <input type="text" class="form-control" id="topic" placeholder="Enter Topic">
-  </div>
-  <button type="submit" class="btn btn-primary">Add Consultant</button>
-</form>
-<br> -->
