--- a/DRHSWS_UI/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -1,3 +1,40 @@
+<h3>Appointments</h3>
+<table mat-table [dataSource]="appointments" class="mat-elevation-z8" width="100%">
+
+  <ng-container matColumnDef="Date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let appointments"> {{ appointments.date}} </td>
+  </ng-container>
+ 
+  <ng-container matColumnDef="Lunch">
+    <th mat-header-cell *matHeaderCellDef> Lunch </th>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.type}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Student">
+    <th mat-header-cell *matHeaderCellDef> Student </th>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.firstName}} {{appointments.lastName}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Grade">
+    <th mat-header-cell *matHeaderCellDef> Grade </th>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.grade}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Teacher">
+    <th mat-header-cell *matHeaderCellDef> Teacher </th>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.teacher}}  </td>
+  </ng-container>
+  
+  <ng-container matColumnDef="Topic">
+    <th mat-header-cell *matHeaderCellDef> Review </th>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.topic}}  </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumnsA"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnsA;"></tr>
+</table>
+
 <!-- Consultant Entries -->
 <br>
 <h3>Consultant Entries</h3>
