--- a/DRHSWS_UI/src/app/signup/signup.component.html
+++ b/DRHSWS_UI/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
         <app-calendar></app-calendar>
     </div>
 </div>
