--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -12,8 +12,17 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/consultant">Consultants</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" routerLink="/admin">Admin(Ease)</a>
+      </li> -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Manage
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/manage/a">Appointments</a>
+          <a class="dropdown-item" routerLink="/manage/c">Consultants</a>
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/resource">Resources and Contact</a>
