--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -16,12 +16,12 @@
         <a class="nav-link" routerLink="/admin">Admin(Ease)</a>
       </li> -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="manage" aria-haspopup="true" aria-expanded="false">
           Manage
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/manage/a">Appointments</a>
-          <a class="dropdown-item" routerLink="/manage/c">Consultants</a>
+          <a class="dropdown-item" routerLink="manage/a">Appointments</a>
+          <a class="dropdown-item" routerLink="manage/c">Consultants</a>
         </div>
       </li>
       <li class="nav-item">
