--- a/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -16,9 +16,9 @@
     <td mat-cell *matCellDef="let reviews"> {{ reviews.firstName}} {{reviews.lastName}} </td>
   </ng-container>
  
-  <ng-container matColumnDef="Email">
-    <th mat-header-cell *matHeaderCellDef> Email </th>
-    <td mat-cell *matCellDef="let reviews"> {{reviews.emailC}} </td>
+  <ng-container matColumnDef="Topic">
+    <th mat-header-cell *matHeaderCellDef> Topic </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.topic}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Student">
@@ -33,7 +33,7 @@
 
   <ng-container matColumnDef="Review">
     <th mat-header-cell *matHeaderCellDef> Review </th>
-    <td mat-cell *matCellDef="let reviews" id="review"> {{reviews.feedback1}} {{reviews.feedback2}}  </td>
+    <td mat-cell *matCellDef="let reviews" id="review"> {{reviews.review}}  </td>
   </ng-container>
   
   <tr mat-header-row *matHeaderRowDef="displayedColumnsR"></tr>
