--- a/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-consultants/manage-consultants.component.html
@@ -15,15 +15,15 @@
     <th mat-header-cell *matHeaderCellDef> Consultant </th>
     <td mat-cell *matCellDef="let reviews"> {{ reviews.firstName}} {{reviews.lastName}} </td>
   </ng-container>
- 
-  <ng-container matColumnDef="Topic">
-    <th mat-header-cell *matHeaderCellDef> Topic </th>
-    <td mat-cell *matCellDef="let reviews"> {{reviews.topic}} </td>
-  </ng-container>
 
   <ng-container matColumnDef="Student">
     <th mat-header-cell *matHeaderCellDef> Student </th>
     <td mat-cell *matCellDef="let reviews"> {{reviews.firstNameS}} {{reviews.lastNameS}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Topic">
+    <th mat-header-cell *matHeaderCellDef> Topic </th>
+    <td mat-cell *matCellDef="let reviews"> {{reviews.topic}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Teacher">
@@ -65,11 +65,20 @@
     <td mat-cell *matCellDef="let consultants"> {{consultants.first}} {{consultants.last}}</td>
   </ng-container>
 
+  <ng-container matColumnDef="Grade">
+      <th mat-header-cell *matHeaderCellDef> Grade </th>
+      <td mat-cell *matCellDef="let consultants"> {{consultants.grade}} </td>
+    </ng-container>
+
   <ng-container matColumnDef="Email">
     <th mat-header-cell *matHeaderCellDef> Email </th>
     <td mat-cell *matCellDef="let consultants"> {{consultants.email}} </td>
   </ng-container>
   
+  <ng-container matColumnDef="Email Second">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let consultants"> {{consultants.emailSec}} </td>
+    </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumnsC"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumnsC;"></tr>
 </table>
