--- a/DRHSWS_UI/src/app/signup/calendar/calendar.component.html
+++ b/DRHSWS_UI/src/app/signup/calendar/calendar.component.html
@@ -8,11 +8,11 @@
     <mat-card-content>
       <div class="row" id="">
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/1/1">A  <span class="badge badge-light">slots</span></button>
+          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/1/1">A Lunch <span class="badge badge-light">slots</span></button>
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/2/2">B  <span class="badge badge-light">slots</span></button>    
+          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/2/2">B Lunch <span class="badge badge-light">slots</span></button>    
         </div>
       </div>
     </mat-card-content>
@@ -25,11 +25,11 @@
     <mat-card-content>
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" [routerLink]="041719/1/1">A  <span class="badge badge-light">slots</span></button>
+          <button type="button" class="btn btn-primary lunch" [routerLink]="041719/1/1">A Lunch <span class="badge badge-light">slots</span></button>
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" [routerLink]="041719/2/2">B  <span class="badge badge-light">slots</span></button>    
+          <button type="button" class="btn btn-primary lunch" [routerLink]="041719/2/2">B Lunch <span class="badge badge-light">slots</span></button>    
         </div>
       </div>
     </mat-card-content>
