--- a/DRHSWS_UI/src/app/signup/signup.component.html
+++ b/DRHSWS_UI/src/app/signup/signup.component.html
@@ -3,4 +3,9 @@
         <app-calendar></app-calendar>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
+        <app-form></app-form>
+    </div>
+</div>
 <router-outlet></router-outlet>
