--- a/DRHSWS_UI/src/app/signup/form/form.component.html
+++ b/DRHSWS_UI/src/app/signup/form/form.component.html
@@ -1,36 +1,38 @@
-<br>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Day of the Week + date + lunch</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <form #f="ngForm" (ngSubmit)="onSubmit(f)" >
-      <div class="form-group">
-        <label for="firstname">First Name</label>
-        <input ngModel name="firstname" nametype="text" class="form-control" id="firstname" placeholder="Enter First Name">
-      </div>
-      <div class="form-group">
-        <label for="lastname">Last Name</label>
-        <input ngModel name="lastname" type="text" class="form-control" id="lastname" placeholder="Enter Last Name">
-      </div>
-      <div class="form-group">
-        <label for="grade">Grade</label>
-        <select ngModel name="grade" class="custom-select" id="grade">
-          <option selected>Open this select menu</option>
-          <option value="9th">9th</option>
-          <option value="10th">10th</option>
-          <option value="11th">11th</option>
-          <option value="12th">12th</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="topic">Topic of Assignment</label>
-        <input ngModel name="topic" type="text" class="form-control" id="topic" placeholder="Enter Topic">
-      </div>
-      <button type="submit" class="btn btn-primary">Sign-up</button>
-    </form>
-  </mat-card-content>
-</mat-card>
+  <br>
+<div class="justify-content-center">
+  <mat-card class="">
+    <mat-card-header>
+      <mat-card-title>Day of the Week + date + lunch</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)" >
+        <div class="form-group">
+          <label for="firstname">First Name</label>
+          <input ngModel name="firstname" nametype="text" class="form-control" id="firstname" placeholder="Enter First Name">
+        </div>
+        <div class="form-group">
+          <label for="lastname">Last Name</label>
+          <input ngModel name="lastname" type="text" class="form-control" id="lastname" placeholder="Enter Last Name">
+        </div>
+        <div class="form-group">
+          <label for="grade">Grade</label>
+          <select ngModel name="grade" class="custom-select" id="grade">
+            <option selected>Open this select menu</option>
+            <option value="9th">9th</option>
+            <option value="10th">10th</option>
+            <option value="11th">11th</option>
+            <option value="12th">12th</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="topic">Topic of Assignment</label>
+          <input ngModel name="topic" type="text" class="form-control" id="topic" placeholder="Enter Topic">
+        </div>
+        <button type="submit" class="btn btn-primary">Sign-up</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
 <br>
 <!-- <div *ngIf="submitted">
 <h3> Your Data </h3>
