--- a/DRHSWS_UI/src/app/signup/calendar/calendar.component.html
+++ b/DRHSWS_UI/src/app/signup/calendar/calendar.component.html
@@ -8,7 +8,7 @@
     <mat-card-content>
       <div class="row" id="">
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/1/1">A Lunch <span class="badge badge-light">slots</span></button>
+          <button type="button" class="btn btn-primary lunch" [routerLink]="041619/1/1" (click)="selected(1)">A Lunch <span class="badge badge-light">slots</span></button>
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
