--- a/DRHSWS_UI/src/app/signup/signup.component.html
+++ b/DRHSWS_UI/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
         <app-calendar></app-calendar>
     </div>
@@ -8,4 +8,9 @@
         <app-form></app-form>
     </div>
 </div>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+<div class="row">
+    <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
+        <app-appointment></app-appointment>
+    </div>
+</div>
