--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.scss
@@ -17,3 +17,8 @@
     margin-left: 16%;
     margin-right: 16%;
 }
+#weekButtons{
+    //max-width:68%;
+    margin-left: 16%;
+    margin-right: 16%;
+}
