--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -78,4 +78,11 @@
   </mat-card>
 </div>
 <br>
+<div *ngIf="submitted">
+  <h3> Your Data </h3>
+  <p> Firstname: {{ data.firstName }} </p>
+  <p> Lastname: {{ data.lastName }} </p>
+  <p> Grade: {{ data.grade }} </p>
+  <p> Topic: {{ data.topic }} </p>
+</div>
 
