--- a/DRHSWS_UI/src/app/signup/form/form.component.html
+++ b/DRHSWS_UI/src/app/signup/form/form.component.html
@@ -34,10 +34,10 @@
   </mat-card>
 </div>
 <br>
-<!-- <div *ngIf="submitted">
+<div *ngIf="submitted">
 <h3> Your Data </h3>
 <p> Firstname: {{ data.firstname }} </p>
 <p> Lastname: {{ data.lastname }} </p>
 <p> Grade: {{ data.grade }} </p>
 <p> Topic: {{ data.topic }} </p>
-</div> -->
+</div>
