--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -13,10 +13,15 @@
       <div class="row" id="">
         <div class="col">
           <button type="button" class="btn btn-primary lunch" (click)="onSelected(1)">A Lunch <span class="badge badge-light">slots</span></button>
+          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[0].open}}</span> -->
+          <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[4].open}}</span> -->
+
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
           <button type="button" class="btn btn-primary lunch" (click)="onSelected(2)">B Lunch <span class="badge badge-light">slots</span></button>    
+          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[1].open}}</span> -->
+          <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[5].open}}</span> -->
         </div>
       </div>
     </mat-card-content>
@@ -30,10 +35,15 @@
       <div class="row">
         <div class="col">
           <button type="button" class="btn btn-primary lunch" (click)="onSelected(3)">A Lunch <span class="badge badge-light">slots</span></button>
+          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[2].open}}</span> -->
+          <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[6].open}}</span> -->
+
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
           <button type="button" class="btn btn-primary lunch" (click)="onSelected(4)">B Lunch <span class="badge badge-light">slots</span></button>    
+          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[3].open}}</span> -->      
+          <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[7].open}}</span> -->
         </div>
       </div>
     </mat-card-content>
