--- a/DRHSWS_UI/src/app/admin/manage-appointments/manage-appointments.component.html
+++ b/DRHSWS_UI/src/app/admin/manage-appointments/manage-appointments.component.html
@@ -1,15 +1,52 @@
 
+<h3>Upcoming Appointments</h3>
+<table mat-table [dataSource]="apptUpcoming" class="mat-elevation-z8" width="100%">
+
+  <ng-container matColumnDef="Date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{ apptUpcoming.appointmentEntityKey.apptDate}} </td>
+  </ng-container>
+ 
+  <ng-container matColumnDef="Lunch">
+    <th mat-header-cell *matHeaderCellDef> Lunch </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.appointmentEntityKey.lunchType}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Student">
+    <th mat-header-cell *matHeaderCellDef> Student </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.firstName}} {{apptUpcoming.lastName}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Grade">
+    <th mat-header-cell *matHeaderCellDef> Grade </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.grade}}  </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Teacher">
+    <th mat-header-cell *matHeaderCellDef> Teacher </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.teacher}}  </td>
+  </ng-container>
+  
+  <ng-container matColumnDef="Topic">
+    <th mat-header-cell *matHeaderCellDef> Review </th>
+    <td mat-cell *matCellDef="let apptUpcoming"> {{apptUpcoming.topic}}  </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumnsAU"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumnsAU;"></tr>
+</table>
+<br>
 <h3>Past Appointments</h3>
 <table mat-table [dataSource]="apptPast" class="mat-elevation-z8" width="100%">
 
   <ng-container matColumnDef="Date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let apptPast"> {{ apptPast.date}} </td>
+    <td mat-cell *matCellDef="let apptPast"> {{ apptPast.appointmentEntityKey.apptDate}} </td>
   </ng-container>
  
   <ng-container matColumnDef="Lunch">
     <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let apptPast"> {{apptPast.type}} </td>
+    <td mat-cell *matCellDef="let apptPast"> {{apptPast.appointmentEntityKey.lunchType}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Student">
@@ -36,80 +73,6 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumnsAP;"></tr>
 </table>
 
-<br>
-<h3>Appointments</h3>
-<table mat-table [dataSource]="appointments" class="mat-elevation-z8" width="100%">
-
-  <ng-container matColumnDef="Date">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let appointments"> {{ appointments.date}} </td>
-  </ng-container>
- 
-  <ng-container matColumnDef="Lunch">
-    <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.type}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Student">
-    <th mat-header-cell *matHeaderCellDef> Student </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.firstName}} {{appointments.lastName}}  </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Grade">
-    <th mat-header-cell *matHeaderCellDef> Grade </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.grade}}  </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Teacher">
-    <th mat-header-cell *matHeaderCellDef> Teacher </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.teacher}}  </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Topic">
-    <th mat-header-cell *matHeaderCellDef> Review </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.topic}}  </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsA"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsA;"></tr>
-</table>
-
-<h3>Appointments</h3>
-<table mat-table [dataSource]="appointments" class="mat-elevation-z8" width="100%">
-
-  <ng-container matColumnDef="Date">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let appointments"> {{ appointments.date}} </td>
-  </ng-container>
- 
-  <ng-container matColumnDef="Lunch">
-    <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.type}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Student">
-    <th mat-header-cell *matHeaderCellDef> Student </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.firstName}} {{appointments.lastName}}  </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Grade">
-    <th mat-header-cell *matHeaderCellDef> Grade </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.grade}}  </td>
-  </ng-container>
-
-  <ng-container matColumnDef="Teacher">
-    <th mat-header-cell *matHeaderCellDef> Teacher </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.teacher}}  </td>
-  </ng-container>
-  
-  <ng-container matColumnDef="Topic">
-    <th mat-header-cell *matHeaderCellDef> Review </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.topic}}  </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumnsA"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnsA;"></tr>
-</table>
 
 <br>
 <h3>Appointments</h3>
@@ -122,7 +85,7 @@
  
   <ng-container matColumnDef="Lunch">
     <th mat-header-cell *matHeaderCellDef> Lunch </th>
-    <td mat-cell *matCellDef="let appointments"> {{appointments.type}} </td>
+    <td mat-cell *matCellDef="let appointments"> {{appointments.lunch}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Student">
