--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -1,25 +1,30 @@
 <br>
 <div id="weekButtons" class="row justify-content-between">
-  <button id="current" type="button" [disabled]="curWeek" class="btn btn-primary" (click)="toggle()">Current Week</button>
+  <button id="current" type="button" [disabled]="curWeek" class="btn btn-primary" (click)="toggle()">Current
+    Week</button>
   <button id="next" type="button" [disabled]="nextWeek" class="btn btn-primary" (click)="toggle()">Next Week</button>
 </div>
 <div class="row justify-content-center">
   <mat-card class="dates calendar">
     <mat-card-header>
-      <mat-card-title><h3>Tuesday</h3></mat-card-title>
+      <mat-card-title>
+        <h3>Tuesday</h3>
+      </mat-card-title>
       <mat-card-subtitle>Date</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div class="row" id="">
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" (click)="onSelected(1)">A Lunch <span class="badge badge-light">slots</span></button>
+          <button type="button" class="btn btn-primary lunch" (click)="onSelected(1)">A Lunch <span
+              class="badge badge-light">slots</span></button>
           <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[0].open}}</span> -->
           <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[4].open}}</span> -->
 
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" (click)="onSelected(2)">B Lunch <span class="badge badge-light">slots</span></button>    
+          <button type="button" class="btn btn-primary lunch" (click)="onSelected(2)">B Lunch <span
+              class="badge badge-light">slots</span></button>
           <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[1].open}}</span> -->
           <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[5].open}}</span> -->
         </div>
@@ -28,21 +33,25 @@
   </mat-card>
   <mat-card class="dates calendar">
     <mat-card-header>
-      <mat-card-title><h3>Wednesday</h3></mat-card-title>
+      <mat-card-title>
+        <h3>Wednesday</h3>
+      </mat-card-title>
       <mat-card-subtitle>Date</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" (click)="onSelected(3)">A Lunch <span class="badge badge-light">slots</span></button>
+          <button type="button" class="btn btn-primary lunch" (click)="onSelected(3)">A Lunch <span
+              class="badge badge-light">slots</span></button>
           <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[2].open}}</span> -->
           <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[6].open}}</span> -->
 
         </div>
         <mat-divider [vertical]=true></mat-divider>
         <div class="col">
-          <button type="button" class="btn btn-primary lunch" (click)="onSelected(4)">B Lunch <span class="badge badge-light">slots</span></button>    
-          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[3].open}}</span> -->      
+          <button type="button" class="btn btn-primary lunch" (click)="onSelected(4)">B Lunch <span
+              class="badge badge-light">slots</span></button>
+          <!-- <span class="badge badge-light" *ngIf="curWeek">{{apptSch[3].open}}</span> -->
           <!-- <span class="badge badge-light" *ngIf="nextWeek">{{apptSch[7].open}}</span> -->
         </div>
       </div>
@@ -52,17 +61,21 @@
 <div class="justify-content-center">
   <mat-card id="form">
     <mat-card-header>
-      <mat-card-title *ngIf="selected"><h3> {{apptSelc.day}}, {{apptSelc.date}} during {{apptSelc.lunch}} Lunch </h3></mat-card-title>
+      <mat-card-title *ngIf="selected">
+        <h3> {{apptSelc.day}}, {{apptSelc.date}} during {{apptSelc.lunch}} Lunch </h3>
+      </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form #f="ngForm" (ngSubmit)="onSubmit(f)">
         <div class="form-group">
           <label for="firstName">First Name</label>
-          <input ngModel name="firstName" nametype="text" class="form-control" id="firstName" placeholder="Enter First Name" required>
+          <input ngModel name="firstName" nametype="text" class="form-control" id="firstName"
+            placeholder="Enter First Name" required>
         </div>
         <div class="form-group">
           <label for="lastName">Last Name</label>
-          <input ngModel name="lastName" type="text" class="form-control" id="lastName" placeholder="Enter Last Name" required>
+          <input ngModel name="lastName" type="text" class="form-control" id="lastName" placeholder="Enter Last Name"
+            required>
         </div>
         <div class="form-group">
           <label for="grade">Grade</label>
@@ -80,7 +93,8 @@
         </div>
         <div class="form-group">
           <label for="teacher">Teacher</label>
-          <input ngModel name="teacher" type="text" class="form-control" id="teacher" placeholder="Enter Teacher" required>
+          <input ngModel name="teacher" type="text" class="form-control" id="teacher" placeholder="Enter Teacher"
+            required>
         </div>
         <button type="submit" class="btn btn-primary">Sign-up</button>
       </form>
@@ -95,4 +109,3 @@
   <p> Grade: {{ data.grade }} </p>
   <p> Topic: {{ data.topic }} </p>
 </div> -->
-
