--- a/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
+++ b/DRHSWS_UI/src/app/signup/appointment/appointment.component.html
@@ -7,7 +7,7 @@
   <mat-card class="dates calendar">
     <mat-card-header>
       <mat-card-title><h3>Tuesday</h3></mat-card-title>
-      <mat-card-subtitle>Date</mat-card-subtitle>
+      <mat-card-subtitle>{{dateT}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div class="row" id="">
@@ -29,7 +29,7 @@
   <mat-card class="dates calendar">
     <mat-card-header>
       <mat-card-title><h3>Wednesday</h3></mat-card-title>
-      <mat-card-subtitle>Date</mat-card-subtitle>
+      <mat-card-subtitle>{{dateW}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
