--- a/DRHSWS_UI/src/app/auth/login/login.component.html
+++ b/DRHSWS_UI/src/app/auth/login/login.component.html
@@ -5,9 +5,13 @@
       {{errorText}}
     </div>
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus formControlName="email" [ngClass]="{'is-invalid': (loginForm?.controls['email']?.touched && loginForm.controls['email'].errors)}">
+    <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus
+      formControlName="username"
+      [ngClass]="{'is-invalid': (loginForm?.controls['email']?.touched && loginForm.controls['email'].errors)}">
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required formControlName="password" [ngClass]="{'is-invalid': (loginForm?.controls['password']?.touched && loginForm.controls['password'].errors)}">
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
+      formControlName="password"
+      [ngClass]="{'is-invalid': (loginForm?.controls['password']?.touched && loginForm.controls['password'].errors)}">
     <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
     <p class="mt-5 mb-3 text-muted">Not a member? Contact Advisor _________</p>
   </form>
