update and delete appointmetns

--- a/DRHSWS_UI/src/app/home/home.component.html
+++ b/DRHSWS_UI/src/app/home/home.component.html
@@ -8,3 +8,14 @@
 <p> The Writing Center is located in Ms. Daniel's room 212. It is open on Tuesday A and B lunch and Wednesday A and B during lunch. The Writing Center 
 provides consultants to help students with their writing assignments. In order to submit a paper, sign up on the calendar 
 page and submit your paper through the dropbox. </p>
+
+<div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+          Dropdown button
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Link 1</a>
+          <a class="dropdown-item" href="#">Link 2</a>
+          <a class="dropdown-item" href="#">Link 3</a>
+        </div>
+      </div>
