--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,8 +1,10 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
   <div><a routerLink="/"><img alt="WC logo" /></a></div>
 
   <div class="collapse navbar-collapse">
-    <ul class="navbar-nav mr-auto">
+    <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
@@ -12,17 +14,14 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/consultant">Consultants</a>
       </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link" routerLink="/admin">Admin(Ease)</a>
-      </li> -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="/manage"
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" routerLink="" id="navbarDropdown"
           aria-haspopup="true" aria-expanded="false">
           Manage
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/manage/a">Appointments</a>
-          <a class="dropdown-item" routerLink="/manage/c">Consultants</a>
+          <a class="dropdown-item" routerLink="manage/a">Appointments</a>
+          <a class="dropdown-item" routerLink="manage/c">Consultants</a>
         </div>
       </li>
       <li class="nav-item">
@@ -40,4 +39,4 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> 
