--- a/DRHSWS_UI/src/app/navigation/navigation.component.html
+++ b/DRHSWS_UI/src/app/navigation/navigation.component.html
@@ -1,4 +1,18 @@
-
+<!-- <ul class="nav navbar-nav navbar-right">
+  <li><a href="#">Sign Up</a></li>
+  <li><a href="#">Sign In</a></li>
+  <li><a href="#">About</a></li>
+  <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        <span class="caret">More</span>
+      </a>
+      <ul class="dropdown-menu">
+          <li><a href="#">Start Learning</a></li>
+          <li><a href="#">View All Courses</a></li>
+          <li><a href="#">Chat with a CodeGuide</a></li>
+        </ul>
+  </li>
+</ul> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <div><a routerLink="/"><img alt="WC logo" /></a></div>
