--- a/DRHSWS_UI/src/app/review/review.component.html
+++ b/DRHSWS_UI/src/app/review/review.component.html
@@ -1,3 +1,5 @@
-<p>
-  review works!
-</p>
+<div class="row">
+  <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
